--- a/blocks/cover/__overlay/cover__overlay.css
+++ b/blocks/cover/__overlay/cover__overlay.css
@@ -2,8 +2,8 @@
   position: absolute;
   z-index: 1;
   width: 100%;
-  height: 100%;;
-  background-color: #2A2C2F; 
-  opacity: .3; 
+  height: 100%;
+  background-color: #2A2C2F;
+  opacity: .3;
   transition: .5s;
 }
