--- a/blocks/places/__url/places__url.css
+++ b/blocks/places/__url/places__url.css
@@ -1,3 +1,10 @@
 .places__url {
   align-self: end;
 }
+
+@media screen and (min-width: 425px) and (max-width: 767px) {
+  .places__url {
+      max-width: calc(100% - 32px);
+      margin-left: 16px;
+    }
+}
