--- a/blocks/cover/__description/cover__description.css
+++ b/blocks/cover/__description/cover__description.css
@@ -7,8 +7,10 @@
   max-width: 360px;
   text-align: center;
   margin-top: 32px;
+  position: relative;
+  z-index: 2;
 }
-@media screen and (max-width: 425px) {
+@media screen and (min-width: 425px) and (max-width: 767px) {
     .cover__description {
         font-size: 14px;
         line-height: 16px;
