--- a/blocks/cover/__link/cover__link.css
+++ b/blocks/cover/__link/cover__link.css
@@ -4,8 +4,23 @@
   position: relative;
   width:100%;
   height: 100%;
-  display: block;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center
 }
-.cover__link:hover .cover__overlay {
+.cover__link:before {
+  content: "";
+  display: block;
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  background-color: #2A2C2F;
+  opacity: .3;
+  transition: .5s;
+  z-index: 2;
+}
+
+.cover__link:hover:before {
   opacity: .8;
 }
