--- a/blocks/cover/__text/cover__text.css
+++ b/blocks/cover/__text/cover__text.css
@@ -9,7 +9,7 @@
   left:50%;
   transform: translate(-50%, -50%);
 }
-@media screen and (max-width: 425px) {
+@media screen and (min-width: 425px) and (max-width: 767px) {
     .cover__text {
        width: calc(100% - 32px);
       }
