--- a/blocks/cover/cover.css
+++ b/blocks/cover/cover.css
@@ -1,11 +1,30 @@
 .cover {
   margin: 0 auto;
-  padding-top: 92px;
-  max-width: 1184px;
+  max-width: 1280px;
+  width: calc(100% - 96px);
+  height: 740px;
   position: relative;
+  background-image: url(../../images/banner.jpg);
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
 }
+
+@media screen and (max-width: 1024px) {
+  .cover {
+    width:100%;
+    height: 640px;
+  }
+}
+
+@media screen and (max-width: 768px) {
+  .cover {
+    height: 480px;
+  }
+}
+
 @media screen and (max-width: 425px) {
-    .cover {
-        padding-top: 66px;
-      }
+  .cover {
+    height: 200px;
+  }
 }
