--- a/blocks/footer/__copyright/footer__copyright.css
+++ b/blocks/footer/__copyright/footer__copyright.css
@@ -5,10 +5,8 @@
   font-style: normal;
   line-height: 16px;
 }
-@media screen and (max-width: 425px) {
+@media screen and (min-width: 425px) and (max-width: 767px) {
     .footer__copyright {
-        margin: 0;
-        font-size: 14px;
         line-height: 14px;
         margin-top: 48px;
       }
