--- a/blocks/footer/footer.css
+++ b/blocks/footer/footer.css
@@ -14,7 +14,7 @@
         width: calc(100% - 48px);
       }
 }
-@media screen and (max-width: 425px) {
+@media screen and (min-width: 425px) and (max-width: 767px) {
     .footer {
         width: calc(100% - 32px);
         flex-direction: column;
