--- a/blocks/headline/_place/headline_place_lead.css
+++ b/blocks/headline/_place/headline_place_lead.css
@@ -4,7 +4,7 @@
   max-width: 720px;
   text-align: center;
 }
-@media screen and (max-width: 425px) {
+@media screen and (min-width: 425px) and (max-width: 767px) {
     .headline_place_lead {
         font-size: 40px;
         line-height: 44px;
