--- a/blocks/headline/_place/headline_place_places.css
+++ b/blocks/headline/_place/headline_place_places.css
@@ -8,8 +8,10 @@
         line-height: 46px;
       }
 }
-@media screen and (max-width: 425px) {
+@media screen and (min-width: 425px) and (max-width: 767px) {
     .headline_place_places {
+        max-width: calc(100% - 32px);
+        margin-left: 16px;
         font-size: 32px;
         line-height: 35px;
       }
