--- a/blocks/intro/intro.css
+++ b/blocks/intro/intro.css
@@ -13,7 +13,7 @@
         max-width: calc(100% - 48px);
       }
 }
-@media screen and (max-width: 425px) {
+@media screen and (min-width: 425px) and (max-width: 767px) {
     .intro {
         max-width: calc(100% - 32px);
         padding-top: 64px;
