--- a/blocks/lead/__photo-caption/lead__photo-caption.css
+++ b/blocks/lead/__photo-caption/lead__photo-caption.css
@@ -13,7 +13,7 @@
         padding-left: 24px;
       }
 }
-@media screen and (max-width: 425px) {
+@media screen and (min-width: 425px) and (max-width: 767px) {
     .lead__photo-caption {
         padding-left: 16px;
       }
