--- a/blocks/lead/lead.css
+++ b/blocks/lead/lead.css
@@ -16,7 +16,7 @@
         max-width: 100%; 
       }
 }
-@media screen and (max-width: 425px) {
+@media screen and (min-width: 425px) and (max-width: 767px) {
     .lead {
         padding-top: 48px;
       }
