--- a/blocks/link/_place/link_place_footer.css
+++ b/blocks/link/_place/link_place_footer.css
@@ -3,8 +3,9 @@
   font-weight: 400;
   font-style: normal;
   line-height: 18px;
+  text-decoration: none;
 }
-@media screen and (max-width: 425px) {
+@media screen and (min-width: 425px) and (max-width: 767px) {
     .link_place_footer {
         font-size: 24px;
         line-height: 24px;
