--- a/blocks/places/__place/places__place.css
+++ b/blocks/places/__place/places__place.css
@@ -13,13 +13,13 @@
         gap: 48px 32px;
       }
 }
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 768px){
     .places__place {
         grid-template-columns: 340px 1fr;
         gap: 48px 28px;
       }
 }
-@media screen and (max-width: 425px) {
+@media screen and (min-width: 425px) and (max-width: 767px) {
     .places__place {
         grid-template-columns: 1fr;
         gap: 32px;
