--- a/blocks/places/places.css
+++ b/blocks/places/places.css
@@ -1,6 +1,7 @@
 .places {
   margin: 0 auto;
   padding-top: 92px;
+  padding-bottom: 92px;
   max-width: 984px;
 }
 @media screen and (max-width: 1024px) {
@@ -13,9 +14,10 @@
         max-width: calc(100% - 48px);
       }
 }
-@media screen and (max-width: 425px) {
+@media screen and (min-width: 425px) and (max-width: 767px) {
     .places {
         padding-top: 64px;
-        max-width: calc(100% - 32px);
+        padding-bottom: 64px;
+        max-width: 100%;
       }
 }
