--- a/pages/index.css
+++ b/pages/index.css
@@ -1,5 +1,7 @@
 @import url(../vendor/normalize.css);
 
+@import url(../vendor/fonts.css);
+
 @import url(../blocks/content/content.css);
 
 @import url(../blocks/cover/cover.css);
@@ -11,7 +13,8 @@
 
 @import url(../blocks/footer/footer.css);
 @import url(../blocks/footer/__copyright/footer__copyright.css);
-@import url(../blocks/footer/__links/footer__links.css);
+@import url(../blocks/footer/__navigations/footer__navigations.css);
+@import url(../blocks/footer/__link/footer__link.css);
 
 @import url(../blocks/header/header.css);
 @import url(../blocks/header/__language/header__language.css);
