--- a/blocks/link/_place/link_place_header.css
+++ b/blocks/link/_place/link_place_header.css
@@ -5,7 +5,7 @@
   margin-bottom: 6px;
   text-decoration: none;
 }
-.link_place_header_active {
+.link_active {
   text-decoration: underline;
 }
 @media screen and (min-width: 425px) and (max-width: 767px) {
