--- a/blocks/cover/__description/cover__description.css
+++ b/blocks/cover/__description/cover__description.css
@@ -10,10 +10,11 @@
   position: relative;
   z-index: 2;
 }
-@media screen and (min-width: 425px) and (max-width: 767px) {
+@media screen and (max-width: 728px) {
     .cover__description {
+        margin-top: 16px;
         font-size: 14px;
         line-height: 16px;
-        margin-top: 16px;
+        max-width: 288px;
       }
 }
