--- a/blocks/cover/cover.css
+++ b/blocks/cover/cover.css
@@ -1,6 +1,6 @@
 .cover {
   margin: 0 auto;
-  max-width: 1280px;
+  max-width: 1184px;
   width: calc(100% - 96px);
   height: 740px;
   position: relative;
@@ -9,22 +9,10 @@
   background-repeat: no-repeat;
   background-size: cover;
 }
-
-@media screen and (max-width: 1024px) {
-  .cover {
-    width:100%;
-    height: 640px;
-  }
-}
-
-@media screen and (max-width: 768px) {
-  .cover {
-    height: 480px;
-  }
-}
-
-@media screen and (max-width: 425px) {
-  .cover {
-    height: 200px;
-  }
+@media screen and (max-width: 1280px) {
+    .cover {
+      max-width: 100%;
+      width: 100%;
+      height: calc(100vw / 1.7);
+    }
 }
