--- a/blocks/footer/__copyright/footer__copyright.css
+++ b/blocks/footer/__copyright/footer__copyright.css
@@ -5,9 +5,8 @@
   font-style: normal;
   line-height: 16px;
 }
-@media screen and (min-width: 425px) and (max-width: 767px) {
+@media screen and (max-width: 768px) {
     .footer__copyright {
         line-height: 14px;
-        margin-top: 48px;
       }
 }
