--- a/blocks/footer/__navigations/footer__navigations.css
+++ b/blocks/footer/__navigations/footer__navigations.css
@@ -1,13 +1,12 @@
 .footer__navigations {
-    margin: 0;
-    padding: 0;
-    list-style-type: none;
-    display: flex;
-    flex-direction: row;
-    gap: 18px;
+  margin: 0;
+  padding: 0;
+  list-style-type: none;
+  display: flex;
+  flex-direction: row;
+  gap: 18px;
 }
-
-@media screen and (min-width: 425px) and (max-width: 767px) {
+@media screen and (max-width: 768px) {
     .footer__navigations {
         flex-direction: column;
         gap: 32px;
