--- a/blocks/footer/footer.css
+++ b/blocks/footer/footer.css
@@ -1,7 +1,7 @@
 .footer {
   margin: 0 auto;
   width: calc(100% - 96px);
-  max-width: 1440px;
+  max-width: 1280px;
   display: flex;
   flex-direction: row;
   align-items: flex-end;
@@ -11,16 +11,10 @@
 }
 @media screen and (max-width: 768px) {
     .footer {
-        width: calc(100% - 48px);
-      }
-}
-@media screen and (min-width: 425px) and (max-width: 767px) {
-    .footer {
+        padding-top: 64px;
         width: calc(100% - 32px);
         flex-direction: column;
         align-items: flex-start;
-        justify-content: normal;
-        padding-top: 64px;
-        padding-bottom: 24px;
+        gap: 48px;
       }
 }
