--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -1,7 +1,7 @@
 .header {
   margin: 0 auto;
   width: calc(100% - 96px);
-  max-width: 1440px;
+  max-width: 1280px;
   display: flex;
   flex-direction: row;
   align-items: flex-end;
@@ -13,7 +13,7 @@
         width: calc(100% - 48px);
       }
 }
-@media screen and (min-width: 425px) and (max-width: 767px) {
+@media screen and (max-width: 425px) {
     .header {
         padding-top: 16px;
         width: calc(100% - 32px);
