--- a/blocks/headline/_place/headline_place_cover.css
+++ b/blocks/headline/_place/headline_place_cover.css
@@ -6,10 +6,16 @@
   position: relative;
   z-index: 2;
 }
-@media screen and (min-width: 425px) and (max-width: 767px) {
+@media screen and (max-width: 728px) {
     .headline_place_cover {
-        max-width: 288px;
+        font-size: 9.3vw;
+        line-height: 9.9vw;
+      }
+}
+@media screen and (max-width: 425px) {
+    .headline_place_cover {
         font-size: 32px;
         line-height: 35px;
+        max-width: 288px;
       }
 }
