--- a/blocks/headline/_place/headline_place_intro.css
+++ b/blocks/headline/_place/headline_place_intro.css
@@ -3,7 +3,13 @@
   line-height: 58px;
   max-width: 690px;
 }
-@media screen and (min-width: 425px) and (max-width: 767px) {
+@media screen and (max-width: 768px) {
+    .headline_place_intro {
+        font-size: 7.0vw;
+        line-height: 7.5vw;
+      }
+}
+@media screen and (max-width: 425px) {
     .headline_place_intro {
         font-size: 32px;
         line-height: 35px;
