--- a/blocks/headline/_place/headline_place_lead.css
+++ b/blocks/headline/_place/headline_place_lead.css
@@ -4,10 +4,15 @@
   max-width: 720px;
   text-align: center;
 }
-@media screen and (min-width: 425px) and (max-width: 767px) {
+@media screen and (max-width: 768px) {
+    .headline_place_lead {
+        font-size: 12.5vw;
+        line-height: 13.0vw;
+      }
+}
+@media screen and (max-width: 425px) {
     .headline_place_lead {
         font-size: 40px;
         line-height: 44px;
-        max-width: 288px;
       }
 }
