--- a/blocks/intro/intro.css
+++ b/blocks/intro/intro.css
@@ -5,17 +5,18 @@
 }
 @media screen and (max-width: 1024px) {
     .intro {
-        max-width: calc(100% - 96px);
+        padding-top:88px;
+        width: calc(100% - 96px);
       }
 }
 @media screen and (max-width: 768px) {
     .intro {
-        max-width: calc(100% - 48px);
+        width: calc(100% - 48px);
       }
 }
-@media screen and (min-width: 425px) and (max-width: 767px) {
+@media screen and (max-width: 425px) {
     .intro {
-        max-width: calc(100% - 32px);
-        padding-top: 64px;
+        padding-top:64px;
+        width: calc(100% - 32px);
       }
 }
