--- a/blocks/lead/__description/lead__description.css
+++ b/blocks/lead/__description/lead__description.css
@@ -8,7 +8,7 @@
   max-width: 640px;
   margin-top: 32px;
 }
-@media screen and (min-width: 425px) and (max-width: 767px) {
+@media screen and (max-width: 768px) {
     .lead__description {
         font-size: 16px;
         line-height: 20px;
