--- a/blocks/lead/__picture-place/lead__picture-place.css
+++ b/blocks/lead/__picture-place/lead__picture-place.css
@@ -2,8 +2,8 @@
   margin: 0;
   margin-top: 64px;
 }
-@media screen and (max-width: 1024px) {
+@media screen and (max-width: 768px) {
     .lead__picture-place {
-        max-width: 100%;
+        margin-top: 40px;
       }
 }
