--- a/blocks/lead/lead.css
+++ b/blocks/lead/lead.css
@@ -8,16 +8,17 @@
 }
 @media screen and (max-width: 1024px) {
     .lead {
-        max-width: calc(100% - 96px); 
+        padding-top:48px;
+        width: calc(100% - 96px);
       }
 }
 @media screen and (max-width: 768px) {
     .lead {
-        max-width: 100%; 
+        width: 100%;
       }
 }
-@media screen and (min-width: 425px) and (max-width: 767px) {
+@media screen and (max-width: 425px) {
     .lead {
-        padding-top: 48px;
+        padding-top:48px;
       }
 }
