--- a/blocks/link/_place/link_place_footer.css
+++ b/blocks/link/_place/link_place_footer.css
@@ -5,9 +5,9 @@
   line-height: 18px;
   text-decoration: none;
 }
-@media screen and (min-width: 425px) and (max-width: 767px) {
+@media screen and (max-width: 768px) {
     .link_place_footer {
         font-size: 24px;
-        line-height: 24px;
+        line-height: 24px;;
       }
 }
