--- a/blocks/link/_place/link_place_header.css
+++ b/blocks/link/_place/link_place_header.css
@@ -5,14 +5,10 @@
   margin-bottom: 6px;
   text-decoration: none;
 }
-.link_active {
-  text-decoration: underline;
-}
-@media screen and (min-width: 425px) and (max-width: 767px) {
+@media screen and (max-width: 768px) {
     .link_place_header {
         font-size: 18px;
         line-height: 20px;
-        font-weight: 400;
         margin-bottom: 8px;
       }
 }
