--- a/blocks/places/places.css
+++ b/blocks/places/places.css
@@ -4,20 +4,20 @@
   padding-bottom: 92px;
   max-width: 984px;
 }
+@media screen and (max-width: 1280px) {
+    .places {
+        padding-top: 88px;
+        max-width: calc(100% - 96px);
+      }
+}
 @media screen and (max-width: 1024px) {
     .places {
+        padding-top: 88px;
         max-width: calc(100% - 96px);
       }
 }
 @media screen and (max-width: 768px) {
     .places {
-        max-width: calc(100% - 48px);
-      }
-}
-@media screen and (min-width: 425px) and (max-width: 767px) {
-    .places {
-        padding-top: 64px;
-        padding-bottom: 64px;
         max-width: 100%;
       }
 }
