--- a/blocks/link/_place/link_place_footer.css
+++ b/blocks/link/_place/link_place_footer.css
@@ -8,6 +8,6 @@
 @media screen and (max-width: 768px) {
     .link_place_footer {
         font-size: 24px;
-        line-height: 24px;;
+        line-height: 24px;
       }
 }
