--- a/blocks/cover/cover.css
+++ b/blocks/cover/cover.css
@@ -2,17 +2,30 @@
   margin: 0 auto;
   max-width: 1184px;
   width: calc(100% - 96px);
-  height: 740px;
+  min-height: 740px;
   position: relative;
   background-image: url(../../images/banner.jpg);
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
 }
-@media screen and (max-width: 1280px) {
+@media screen and (max-width: 1024px) {
     .cover {
-      max-width: 100%;
-      width: 100%;
-      height: calc(100vw / 1.7);
-    }
+        width: 100%;
+        min-height: 640px;
+      }
+}
+@media screen and (max-width: 768px) {
+    .cover {
+        min-height: 480px;
+      }
+}
+@media screen and (max-width: 425px) {
+    .cover {
+        min-height: 200px;
+      }
 }
