--- a/blocks/footer/footer.css
+++ b/blocks/footer/footer.css
@@ -11,8 +11,23 @@
 }
 @media screen and (max-width: 768px) {
     .footer {
-        padding-top: 64px;
+        width: calc(100% - 48px);
+        padding-top: 88px;
+        padding-bottom: 24px;
+      }
+}
+@media screen and (max-width: 767px) {
+    .footer {
+        flex-direction: column;
+        align-items: flex-start;
+        gap: 48px;
+      }
+}
+@media screen and (max-width: 510px) {
+    .footer {
         width: calc(100% - 32px);
+        padding-top: 64px;
+        padding-bottom: 24px;
         flex-direction: column;
         align-items: flex-start;
         gap: 48px;
