--- a/blocks/intro/intro.css
+++ b/blocks/intro/intro.css
@@ -1,22 +1,22 @@
 .intro {
   margin: 0 auto;
   padding-top: 92px;
-  max-width: 984px;
+  max-width: 926px;
 }
 @media screen and (max-width: 1024px) {
     .intro {
-        padding-top:88px;
-        width: calc(100% - 96px);
+        max-width: calc(100% - 96px);
       }
 }
 @media screen and (max-width: 768px) {
     .intro {
-        width: calc(100% - 48px);
+        padding-top: 88px;
+        max-width: calc(100% - 48px);
       }
 }
 @media screen and (max-width: 425px) {
     .intro {
-        padding-top:64px;
-        width: calc(100% - 32px);
+        padding-top: 64px;
+        max-width: calc(100% - 32px);
       }
 }
