--- a/blocks/lead/__description/lead__description.css
+++ b/blocks/lead/__description/lead__description.css
@@ -8,11 +8,18 @@
   max-width: 640px;
   margin-top: 32px;
 }
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 712px) {
+    .lead__description {
+        font-size: 4.2vw;
+        line-height: 5.0vw;
+        max-width: 70%;
+      }
+}
+@media screen and (max-width: 425px) {
     .lead__description {
         font-size: 16px;
         line-height: 20px;
-        max-width: 288px;
         margin-top: 16px;
+        max-width: 288px;
       }
 }
