--- a/blocks/lead/__picture-place/lead__picture-place.css
+++ b/blocks/lead/__picture-place/lead__picture-place.css
@@ -2,7 +2,12 @@
   margin: 0;
   margin-top: 64px;
 }
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 1024px) {
+    .lead__picture-place {
+        margin-top: 56px;
+      }
+}
+@media screen and (max-width: 425px) {
     .lead__picture-place {
         margin-top: 40px;
       }
