--- a/blocks/photo-grid/photo-grid.css
+++ b/blocks/photo-grid/photo-grid.css
@@ -4,38 +4,25 @@
   max-width: 1184px;
   width: calc(100% - 96px);
   display: grid;
-  grid-template-columns: repeat(4, 1fr);
+  grid-template-columns: repeat(auto-fit, minmax(284px, 1fr));
   gap: 16px;
-}
-@media screen and (max-width: 1280px) {
-    .photo-grid {
-        padding-top: 88px;
-        width: 100%;
-        max-width: calc(100% - 96px);
-        grid-template-columns: repeat(3, 1fr);
-        gap: 14px;
-      }
 }
 @media screen and (max-width: 1024px) {
     .photo-grid {
-        padding-top: 88px;
-        width: 100%;
-        max-width: calc(100% - 96px);
-        grid-template-columns: repeat(3, 1fr);
         gap: 14px;
       }
 }
 @media screen and (max-width: 768px) {
     .photo-grid {
-        max-width: calc(100% - 48px);
-        grid-template-columns: repeat(2, 1fr);
+        padding-top: 88px;
+        width: calc(100% - 48px);
         gap: 16px;
       }
 }
 @media screen and (max-width: 425px) {
     .photo-grid {
-        max-width: calc(100% - 32px);
-        grid-template-columns: 1fr;
+        padding-top: 64px;
+        width: calc(100% - 32px);
         gap: 12px;
       }
 }
