--- a/blocks/places/__place/places__place.css
+++ b/blocks/places/__place/places__place.css
@@ -7,21 +7,39 @@
 .places__place:last-child {
   margin-bottom: 0px;
 }
-@media screen and (max-width: 1280px) {
-    .places__place {
-        grid-template-columns: 440px 1fr;
-        gap: 48px 32px;
-      }
-}
 @media screen and (max-width: 1024px) {
     .places__place {
-        grid-template-columns: 340px 1fr;
+        display: grid;
+        grid-template-columns: 440px 1fr;
         gap: 48px 32px;
+        margin-bottom: 80px;
       }
 }
+@media screen and (max-width: 920px) {
+  .places__place {
+      grid-template-columns: 1fr 1fr;
+    }
+}
+
 @media screen and (max-width: 768px) {
     .places__place {
+        display: grid;
+        grid-template-columns: 340px 1fr;
+        gap: 48px 28px;
+        margin-bottom: 72px;
+      }
+}
+
+@media screen and (max-width: 767px) {
+    .places__place {
+        grid-template-columns: 1fr 1fr;
+      }
+}
+@media screen and (max-width: 620px) {
+    .places__place {
+        display: grid;
         grid-template-columns: 1fr;
         gap: 32px;
+        margin-bottom: 50px;
       }
 }
