--- a/blocks/places/__url/places__url.css
+++ b/blocks/places/__url/places__url.css
@@ -1,13 +1,16 @@
 .places__url {
   align-self: end;
 }
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 620px) {
     .places__url {
         padding-left: 24px;
+        padding-right: 24px;
       }
 }
+
 @media screen and (max-width: 425px) {
-    .places__url {
-        padding-left: 16px;
-      }
+  .places__url {
+      padding-left: 16px;
+      padding-right: 16px;
+    }
 }
