--- a/blocks/places/places.css
+++ b/blocks/places/places.css
@@ -2,22 +2,23 @@
   margin: 0 auto;
   padding-top: 92px;
   padding-bottom: 92px;
-  max-width: 984px;
-}
-@media screen and (max-width: 1280px) {
-    .places {
-        padding-top: 88px;
-        max-width: calc(100% - 96px);
-      }
-}
-@media screen and (max-width: 1024px) {
-    .places {
-        padding-top: 88px;
-        max-width: calc(100% - 96px);
-      }
+  max-width: 1080px;
+  padding-left: 48px;
+  padding-right: 48px;
 }
 @media screen and (max-width: 768px) {
     .places {
-        max-width: 100%;
+        padding-top: 88px;
+        padding-bottom: 88px;
+        padding-left: 24px;
+        padding-right: 24px;
+      }
+}
+@media screen and (max-width: 620px) {
+    .places {
+        padding-top: 64px;
+        padding-bottom: 64px;
+        padding-left: 0;
+        padding-right: 0;
       }
 }
