--- a/blocks/intro/intro.css
+++ b/blocks/intro/intro.css
@@ -1,11 +1,15 @@
 .intro {
   margin: 0 auto;
   padding-top: 92px;
-  max-width: 926px;
+  max-width: 984px;
+  padding-left: 48px;
+  padding-right: 48px;
 }
 @media screen and (max-width: 1024px) {
     .intro {
         max-width: calc(100% - 96px);
+        padding-left: 0;
+        padding-right: 0;
       }
 }
 @media screen and (max-width: 768px) {
